--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.3.1
   dio: ^5.5.0+1
   logger: ^2.4.0
+  font_awesome_flutter: ^10.7.0
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
 
